--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-color": "^3.0.4",
     "@types/react-dom": "^17.0.0",
     "dotenv": "^8.2.0",
     "firebase": "^8.3.1",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.5",
     "react-query": "^3.13.0",
