--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,14 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FOODPLAN_1292F }}'
-          channelId: live
-          projectId: foodplan-1292f
         env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
           REACT_APP_API_KEY: '${{ secrets.REACT_APP_API_KEY }}'
           REACT_APP_AUTH_DOMAIN: '${{ secrets.REACT_APP_AUTH_DOMAIN }}'
           REACT_APP_DATABASE_URL: '${{ secrets.REACT_APP_DATABASE_URL }}'
@@ -28,4 +21,11 @@ jobs:
           REACT_APP_MESSAGING_SENDER_ID: '${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}'
           REACT_APP_APP_ID: '${{ secrets.REACT_APP_APP_ID }}'
           REACT_APP_MEASUREMENT_ID: '${{ secrets.REACT_APP_MEASUREMENT_ID }}'
-
+  - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FOODPLAN_1292F }}'
+          channelId: live
+          projectId: foodplan-1292f
+        env:
+          FIREBASE_CLI_PREVIEWS: hostingchannels
