--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sort-by-typescript": "^1.1.0",
+    "ts-node": "^9.1.1",
     "typed-rest-client": "^1.8.3",
     "typescript": "^4.2.4",
     "web-vitals": "^1.0.1"
@@ -55,6 +56,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
+    "firebase-admin": "^9.6.0",
+    "js-file-download": "^0.4.12"
   }
 }
