--- a/firebase.json
+++ b/firebase.json
@@ -12,5 +12,20 @@
         "destination": "/index.html"
       }
     ]
+  },
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint && tsc",
+      "npm --prefix \"$RESOURCE_DIR\" run build"
+    ]
+  },
+
+  "emulators": {
+    "firestore": {
+      "port": "5050"
+    },
+    "functions": {
+      "port": "5001"
+    }
   }
 }
