--- a/firebase.json
+++ b/firebase.json
@@ -15,8 +15,8 @@
   },
   "functions": {
     "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint && tsc",
-      "npm --prefix \"$RESOURCE_DIR\" run build"
+      "npm --prefix ./functions/ run lint && tsc",
+      "npm --prefix ./functions/ run build"
     ]
   },
 
