--- a/functions/package.json
+++ b/functions/package.json
@@ -3,8 +3,8 @@
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
-    "serve": "npm run build && firebase emulators:start",
-    "shell": "npm run build && firebase functions:shell",
+    "serve": "npm run build && set GOOGLE_APPLICATION_CREDENTIALS=serviceAccount.json&& firebase emulators:start",
+    "shell": "npm run build && set GOOGLE_APPLICATION_CREDENTIALS=serviceAccount.json&& firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
