--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "firebase": "^8.3.1",
     "moment": "^2.29.1",
+    "natural-orderby": "^2.0.3",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-color": "^2.19.3",
