--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.5",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.13.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
