--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
     "axios": "^0.21.1",
     "firebase-admin": "^9.6.0",
     "js-file-download": "^0.4.12"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
